Fix delays on mobile devices

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,6 +14,12 @@ textarea {
   pointer-events: none;
 }
 
+/* Fix click delays on mobile devices */
+a, button {
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+}
+
 .page-content--scroll {
   scroll-behavior: smooth;
 }
